--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,2 +1,16 @@
-<%= song.name %>
-<%= song.songInd %>
+<!DOCTYPE html>
+<html lang="en">
+
+
+<head>
+<meta charset="UTF-8">
+<title>Show Song</title>
+<link rel="stylesheet" href="./../style.css">
+</head>
+
+<body>
+<h1><%= song.name %></h1>
+<h3><%= song.songInd %></h3>
+</body>
+
+</html>
